# der_die_das

./: .gitignore  README.md  pyproject.toml
online/: lemmata_dict.pkl  manage.py  my_decorators.py
online/der_die_das/: apps.py  constants.py  forms.py  models.py  tables.py  urls.py  views.py
online/der_die_das/migrations/: 0001_initial.py  0002_alter_type_entry_type_name.py
online/der_die_das/templates/: base_history.html
online/der_die_das/templates/der_die_das/: entry_list.html  game.html  history.html  history_detail.html  lemma_detail.html  lemma_search_list.html
online/home/: context_processors.py  urls.py  views.py
online/home/templates/: base_bootstrap.html  base_menu.html
online/home/templates/home/: index.html
online/home/templates/registration/: deregister.html  login.html  register.html  settings.html
online/online/: asgi.py  settings.py  urls.py  wsgi.py
online/scripts/: delete_migrations.py  get_updates.py  load.py  update_freq.py
